--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,9 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div id="root" style="
-      z-index: 9999;
-  "><div style="
-      z-index: 2;
-  ">
+  <div id="root" style="z-index: 9999;position: fixed; width: 100%; height: 100vh; pointer-events: none;"></div>
+  <div style="z-index: 2;position: fixed;top:0;left:0;overflow:auto;height:100vh;">
+
   
 <div data-collapse="medium" data-animation="default" data-duration="400" data-no-scroll="1" data-easing="ease"
   data-easing2="ease" role="banner" class="navbar w-nav">
