--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Sep 30 2023 13:37:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Sep 30 2023 13:34:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65181ed404405ccbaf9ea980" data-wf-site="65181ed404405ccbaf9ea94e">
 <head>
   <meta charset="utf-8">
@@ -47,24 +47,24 @@
   <div class="section">
     <div id="works-grid" class="w-layout-grid works-grid">
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-af9ea980">
-        <div class="work-description"><img src="images/Screenshot-2023-09-30-at-16.16.00.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 2934px) 98vw, 2876px" srcset="images/Screenshot-2023-09-30-at-16.16.00-p-500.png 500w, images/Screenshot-2023-09-30-at-16.16.00-p-800.png 800w, images/Screenshot-2023-09-30-at-16.16.00-p-1080.png 1080w, images/Screenshot-2023-09-30-at-16.16.00-p-1600.png 1600w, images/Screenshot-2023-09-30-at-16.16.00-p-2000.png 2000w, images/Screenshot-2023-09-30-at-16.16.00-p-2600.png 2600w, images/Screenshot-2023-09-30-at-16.16.00.png 2876w" alt="" class="image">
+        <div class="work-description"><img src="images/Screenshot-2023-09-30-at-16.16.00.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 2934px) 98vw, 2876px" srcset="images/Screenshot-2023-09-30-at-16.16.00.png 500w, images/Screenshot-2023-09-30-at-16.16.00.png 800w, images/Screenshot-2023-09-30-at-16.16.00.png 1080w, images/Screenshot-2023-09-30-at-16.16.00.png 1600w, images/Screenshot-2023-09-30-at-16.16.00.png 2000w, images/Screenshot-2023-09-30-at-16.16.00.png 2600w, images/Screenshot-2023-09-30-at-16.16.00.png 2876w" alt="" class="image">
           <a href="work/project-1.html" class="project-name-link">Failean.com<br></a>
           <div class="paragraph-light">Self funded micro-sass full stack web app</div>
         </div>
       </div>
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-af9ea980">
-        <div class="work-description"><img src="images/Screenshot-2023-09-30-at-16.16.41.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1510px) 96vw, 1450px" srcset="images/Screenshot-2023-09-30-at-16.16.41-p-500.png 500w, images/Screenshot-2023-09-30-at-16.16.41-p-800.png 800w, images/Screenshot-2023-09-30-at-16.16.41-p-1080.png 1080w, images/Screenshot-2023-09-30-at-16.16.41.png 1450w" alt="" class="image-2">
+        <div class="work-description"><img src="images/Screenshot-2023-09-30-at-16.16.41.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1510px) 96vw, 1450px" srcset="images/Screenshot-2023-09-30-at-16.16.41.png 500w, images/Screenshot-2023-09-30-at-16.16.41.png 800w, images/Screenshot-2023-09-30-at-16.16.41.png 1080w, images/Screenshot-2023-09-30-at-16.16.41.png 1450w" alt="" class="image-2">
           <a href="work/project-2.html" class="project-name-link">Neurobica.io</a>
           <div class="paragraph-light">Incorporating startup neurotech MVP</div>
         </div>
       </div>
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fb4-af9ea980">
-        <div class="work-description"><img src="blob:https://webflow.com/a791047d-4784-4f4e-9c3f-cd0c891137eb" loading="lazy" alt="" class="image-3"><img src="blob:https://webflow.com/ccff88dd-b47e-4c31-bc65-5f963b319f2c" loading="lazy" alt="" class="image-4">
+        <div class="work-description"><img src="blob:https://webflow.com/a791047d-4784-4f4e-9c3f-cd0c891137eb" loading="lazy" alt="" class="image-3">
           <a href="work/project-3.html" class="project-name-link">Offisito.com</a>
           <div class="paragraph-light">Your office when you&#x27;re offsite</div>
         </div>
       </div>
-      <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-af9ea980"><img src="images/asd.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1974px) 97vw, 1915px" srcset="images/asd-p-500.png 500w, images/asd-p-800.png 800w, images/asd-p-1080.png 1080w, images/asd-p-1600.png 1600w, images/asd.png 1915w" alt="">
+      <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-af9ea980"><img src="images/asd.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1974px) 97vw, 1915px" srcset="images/asd.png 500w, images/asd.png 800w, images/asd.png 1080w, images/asd.png 1600w, images/asd.png 1915w" alt="">
         <div class="work-description">
           <a href="work/project-4.html" class="project-name-link">2 Years Dev position in IAF</a>
           <div class="paragraph-light">Operational GIS web apps</div>
