--- a/public/blog.html
+++ b/public/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Oct 17 2023 12:30:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Oct 19 2023 00:12:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65181ed404405ccbaf9ea98a" data-wf-site="65181ed404405ccbaf9ea94e">
 <head>
   <meta charset="utf-8">
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
-    <div class="navigation-items"><img src="images/Screenshot-2023-10-01-at-23.44.21.png" loading="lazy" width="112" sizes="(max-width: 479px) 100vw, 112px" alt="" srcset="images/Screenshot-2023-10-01-at-23.44.21-p-500.png 500w, images/Screenshot-2023-10-01-at-23.44.21.png 606w">
+    <div class="navigation-items"><img src="images/Screenshot-2023-10-19-at-2.37.43.png" loading="lazy" width="154" height="Auto" alt="" srcset="images/Screenshot-2023-10-19-at-2.37.43.png 500w, images/Screenshot-2023-10-19-at-2.37.43.png 800w, images/Screenshot-2023-10-19-at-2.37.43.png 980w" sizes="(max-width: 479px) 100vw, 154px">
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="index.html" class="navigation-item w-nav-link">About</a>
