--- a/public/contact.html
+++ b/public/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Oct 17 2023 12:30:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Oct 19 2023 00:12:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65181ed404405ccbaf9ea984" data-wf-site="65181ed404405ccbaf9ea94e">
 <head>
   <meta charset="utf-8">
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
-    <div class="navigation-items"><img src="images/Screenshot-2023-10-01-at-23.44.21.png" loading="lazy" width="112" sizes="(max-width: 479px) 100vw, 112px" alt="" srcset="images/Screenshot-2023-10-01-at-23.44.21-p-500.png 500w, images/Screenshot-2023-10-01-at-23.44.21.png 606w">
+    <div class="navigation-items"><img src="images/Screenshot-2023-10-19-at-2.37.43.png" loading="lazy" width="154" height="Auto" alt="" srcset="images/Screenshot-2023-10-19-at-2.37.43.png 500w, images/Screenshot-2023-10-19-at-2.37.43.png 800w, images/Screenshot-2023-10-19-at-2.37.43.png 980w" sizes="(max-width: 479px) 100vw, 154px">
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="index.html" class="navigation-item w-nav-link">About</a>
@@ -44,9 +44,9 @@
       <div class="w-layout-grid about-intro-grid">
         <div id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c1-af9ea984" class="about-head-text-wrap">
           <div class="label cc-about-light">Hey there!</div>
-          <h2 class="hi-there-heading">I&#x27;m Jane Lo</h2>
-          <p class="paragraph-light">I’m a web and graphic designer based in San Francisco, CA. I’m originally from Brooklyn, NY and will forever talk about the superiority of New York pizza and bagels. I like to build for the web and make things pretty.</p>
-        </div><img src="images/about-pic.svg" alt="" id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-af9ea984">
+          <h2 class="hi-there-heading">I&#x27;m Michael Nusair</h2>
+          <p class="paragraph-light">I’m a a web engineer, problem solver and entrepreneur.<br>I am always excited to join or take the lead over technical projects.<br>My passion is simply to solve problems and overcome challenges.<br>I am most experienced with software technologies and especially web.<br>I was born in 1998 and I live in Israel.</p>
+        </div><img src="images/profile.png" alt="" id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-af9ea984">
       </div>
     </div>
   </div>
@@ -54,20 +54,15 @@
     <div class="container">
       <div class="w-layout-grid skills-grid">
         <div id="w-node-dac044b7-be90-60f3-414d-4224828ffd8a-af9ea984" class="skillset-wrap">
-          <h3>My Career so far</h3>
-          <p class="paragraph-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+          <h3>What value do I ofer?</h3>
+          <p class="paragraph-light"><strong>I help people to turn there dreams into reality<br></strong>I can help in any step, transforming:<br>Initial business ideas =&gt; Solid Product conceptions<br>Product conceptions =&gt; Optimized Development Plans<br>Development Plans =&gt; Acurate production systems<br></p>
         </div>
         <div id="w-node-dac044b7-be90-60f3-414d-4224828ffd8f-af9ea984" class="w-layout-grid services-items-grid">
           <div id="w-node-dac044b7-be90-60f3-414d-4224828ffd90-af9ea984">
-            <div class="service-name-text">Graphic Design</div>
-            <div class="service-name-text">UX Design</div>
-            <div class="service-name-text">Prototyping</div>
-            <div class="service-name-text">Webflow</div>
-          </div>
-          <div id="w-node-dac044b7-be90-60f3-414d-4224828ffd99-af9ea984">
-            <div class="service-name-text">Branding</div>
-            <div class="service-name-text">Coding</div>
-            <div class="service-name-text">Back-End</div>
+            <div class="service-name-text">CTO as a Service</div>
+            <div class="service-name-text">Project as a Service<br></div>
+            <div class="service-name-text">Engineer as a Service</div>
+            <div class="service-name-text">Product as a Service</div>
           </div>
         </div>
       </div>
